[gd_scene load_steps=16 format=3 uid="uid://cd4vyy8s6fp4"]

[ext_resource type="Texture2D" uid="uid://c1agy54ctlppm" path="res://Entities/Enemies/Larve/Larve.png" id="1"]
[ext_resource type="Script" path="res://Entities/Enemies/Larve/Larve.gd" id="2"]
[ext_resource type="PackedScene" path="res://Entities/Enemies/BasicEnemy.tscn" id="3"]
[ext_resource type="Script" path="res://Entities/Enemies/Larve/States/LarveDied.gd" id="4"]
[ext_resource type="Script" path="res://Entities/Enemies/Larve/States/LarveFalling.gd" id="5"]
[ext_resource type="Script" path="res://Entities/Enemies/Larve/LarveStateMachine.gd" id="6"]
[ext_resource type="Script" path="res://Entities/Enemies/Larve/States/LarveWalk.gd" id="7"]
[ext_resource type="Script" path="res://Entities/Enemies/Larve/States/LarveStaggred.gd" id="8"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 1.0
height = 2.0

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(14, 8)

[sub_resource type="Animation" id="3"]
resource_name = "Died"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TouchDamageHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="4"]
resource_name = "Ready"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TouchDamageHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="5"]
resource_name = "Staggered"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bef27"]
_data = {
"Died": SubResource("3"),
"Ready": SubResource("4"),
"Staggered": SubResource("5")
}

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(2, 8)

[node name="Larve" instance=ExtResource("3")]
collision_layer = 8
collision_mask = 35
script = ExtResource("2")
direction = "Right"
speed = 30.0
grv = 120.0
damage = 20
knockback = 1
health = 30

[node name="StaggeredTime" type="Timer" parent="Timers" index="0"]
wait_time = 0.8
one_shot = true

[node name="StateMachine" parent="." index="1"]
script = ExtResource("6")
first_state_path = NodePath("Falling")

[node name="Walk" type="Node" parent="StateMachine" index="0"]
script = ExtResource("7")
parent_sm_path = NodePath("..")
parent_path = NodePath("../..")
anim_path = NodePath("../../AnimationPlayer")

[node name="Staggered" type="Node" parent="StateMachine" index="1"]
script = ExtResource("8")
parent_sm_path = NodePath("..")
parent_path = NodePath("../..")
anim_path = NodePath("../../AnimationPlayer")

[node name="Falling" type="Node" parent="StateMachine" index="2"]
script = ExtResource("5")
parent_sm_path = NodePath("..")
parent_path = NodePath("../..")
anim_path = NodePath("../../AnimationPlayer")

[node name="Died" type="Node" parent="StateMachine" index="3"]
script = ExtResource("4")
parent_sm_path = NodePath("..")
parent_path = NodePath("../..")
anim_path = NodePath("../../AnimationPlayer")

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("1")

[node name="TouchDamageHitBox" parent="." index="3"]
collision_layer = 8

[node name="CollisionShape2D" parent="TouchDamageHitBox" index="0"]
position = Vector2(0, -4)
shape = SubResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Body" index="0"]
position = Vector2(0, -4)
texture = ExtResource("1")

[node name="Raycasts" type="Node2D" parent="Body" index="1"]

[node name="Foward" type="RayCast2D" parent="Body/Raycasts" index="0"]
position = Vector2(5, -1)
target_position = Vector2(2, 0)
collision_mask = 34

[node name="IncomingCorner" type="RayCast2D" parent="Body/Raycasts" index="1"]
target_position = Vector2(0, 2)
collision_mask = 34

[node name="CornerNormal" type="RayCast2D" parent="Body/Raycasts" index="2"]
position = Vector2(0, 1)
target_position = Vector2(-5, 0)
collision_mask = 34

[node name="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_bef27")
}
autoplay = "Ready"

[node name="BlockedByPlayer" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockedByPlayer" index="0"]
position = Vector2(8, -4)
shape = SubResource("6")

[connection signal="timeout" from="Timers/StaggeredTime" to="StateMachine/Staggered" method="_on_StaggeredTime_timeout"]
[connection signal="area_entered" from="TouchDamageHitBox" to="." method="_on_TouchDamageHitBox_area_entered"]
[connection signal="area_exited" from="TouchDamageHitBox" to="." method="_on_TouchDamageHitBox_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="BlockedByPlayer" to="." method="_on_BlockedByPlayer_body_entered"]
[connection signal="body_exited" from="BlockedByPlayer" to="." method="_on_BlockedByPlayer_body_exited"]
